# multisense_viewer

./: .gitignore  .gitmodules  3dgs_script.py  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  install_spirv_compiler.sh  main.cpp
.github/workflows/: cmake-ubuntu.yml  cmake-windows.yml  cmake.yml  msbuild.yml  workflow.yml  workflow_pr.yml
Assets/DefaultScenes/: Example.multisense
Assets/Models/: S27.gltf  camera.gltf  coordinates.gltf  humvee.gltf  s30_pbr.gltf  sphere.gltf
Assets/Projects/: DefaultProject.json  MultiSenseEditor.json  MultiSenseProject.json  MultiSenseViewer.json  MyProject.json
Assets/Scenes/: Example.multisense
Assets/Shaders/: CameraGizmo.frag  CameraGizmo.vert  SYCLRenderer.frag  default.frag  default.vert  default2D.frag  default2D.vert  defaultBasic.frag  defaultPhongLight.frag  defaultTexture.frag  depth2D.frag  pointcloud.frag  pointcloud.vert
Assets/Tools/: Classes.txt  New Text Document.txt  compile.sh  compile_shader.py  control  how_to_release  how_to_release.md  install_spirv_compiler.sh  monitor_memory_usage.py
Assets/shaders/: compile.sh
Src/CRLCamera/: CRLPhysicalCamera.cpp  CRLPhysicalCamera.h  CalibrationYaml.h  CameraConnection.cpp  CameraConnection.h  ThreadPool.h
Src/Core/: Buffer.cpp  Buffer.h  Camera.h  Definitions.h  KeyInput.h  Texture.cpp  Texture.h  Validation.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h
Src/Features/: Feature.cpp  VisualOdometry.cpp  VisualOdometry.h
Src/ModelLoaders/: CRLCameraModels.cpp  CRLCameraModels.h  glTFModel.cpp  glTFModel.h
Src/Renderer/: Renderer.cpp  Renderer.h  SharedData.h
Src/Tools/: Logger.cpp  Logger.h  Macros.h  Populate.h  Utils.h  stb_include.cpp
Src/VO/: GraphSlam.h  LazyCSV.h
Src/imgui/: Background.h  DebugWindow.h  GuiManager.cpp  GuiManager.h  InteractionMenu.h  Layer.h  LayerExample.h  SideBar.h
Viewer/: CMakeLists.txt  Viewer.cpp  Viewer.h
cmake/: Common.cmake  CompilerWarnings.cmake
docs/: BUILD.md  CMakeLists.txt  Doxyfile  mainpage.dox
docs/html/: Base_8h.html  Base_8h_source.html  Buffer_8cpp.html  Buffer_8h.html  Buffer_8h_source.html  CRLBaseCamera_8h.html  CRLBaseCamera_8h_source.html  CRLMultiSenseS30_8cpp.html  CRLMultiSenseS30_8h.html  CRLMultiSenseS30_8h_source.html  CRLVirtualCamera_8cpp.html  CRLVirtualCamera_8h.html  CRLVirtualCamera_8h_source.html  Camera_8h.html  Camera_8h_source.html  Example_8cpp.html  Example_8h.html  Example_8h_source.html  LightSource_8cpp.html  LightSource_8h.html  LightSource_8h_source.html  Macros_8h.html  Macros_8h_source.html  MeshModel_8cpp.html  MeshModel_8h.html  MeshModel_8h_source.html  MultiSensePointCloud_8cpp.html  MultiSensePointCloud_8h.html  MultiSensePointCloud_8h_source.html  MultiSenseS30_8cpp.html  MultiSenseS30_8h.html  MultiSenseS30_8h_source.html  PointCloudModel_8cpp.html  PointCloudModel_8h.html  PointCloudModel_8h_source.html  Populate_8h.html  Populate_8h_source.html  Renderer_8cpp.html  Renderer_8h.html  Renderer_8h_source.html  (+261 more)
experimental_features/: BroadcastListener.cpp  CMakeLists.txt  ListAdapters.cpp  decode_mp4.cpp
experimental_features/AutoConnect/: AutoConnect.cpp  AutoConnect.h  AutoConnectLinux.cpp  AutoConnectLinux.h  CMakeLists.txt  main.cpp
experimental_features/AutoConnect/old/: ArpListener.cpp  MulticastListener.cpp
experimental_features/decode_mp4/: decode.cpp
experimental_features/logger/: CMakeLists.txt  Logger.cpp  main.cpp
include/: main.cpp
internal/AutoConnect/: AutoConnect.h  AutoConnectLinux.cpp  AutoConnectLinux.h  AutoConnectWindows.cpp  AutoConnectWindows.h  CMakeLists.txt  LinuxConnect.cpp  WinRegEditor.h  main.cpp
internal/AutoConnect/include/AutoConnect/: AutoConnect.h  AutoConnectLinux.h  AutoConnectWindows.h  ThreadPool.h
internal/AutoConnect/src/: AutoConnectLinux.cpp  AutoConnectWindows.cpp  main.cpp
internal/LibMultiSenseWindows/: CMakeLists.txt  MultiSense.exp
internal/LibMultiSenseWindows/Release/: MultiSense.exp  MultiSense.lib
internal/winpcap/: CMakeLists.txt
old/: CameraGraphicsPipelineComponent.h  CustomModels.h  DefaultPBRGraphicsPipelineComponent.h  GLTFDefines.h  GLTFModelComponent.cpp  GLTFModelComponent.h  SecondaryCameraComponent.h  SkyboxGraphicsPipelineComponent.cpp  SkyboxGraphicsPipelineComponent.h  Texture.h
old/3DGS/: GaussianModelGraphicsPipeline.cpp  GaussianModelGraphicsPipeline.h  Rasterizer.h  RasterizerUtils.h
old/Default/: DefaultScene.cpp
old/MultiSenseViewer/: MultiSenseViewer.cpp
old/RenderComponents/: DefaultGraphicsPipelineComponent2.h  RenderBase.h
old/ScriptSupport/: ScriptBuilder.h  ScriptUtils.h
old/old/: GraphicsPipeline.h  RenderBase.h
scripts/: images_to_ros1_bagfile.py
shaders/: compile.sh  triangle.frag  triangle.frag.spv
shaders/myScene/: box.frag  box.vert.spv
shaders/old/: PhongLight.frag  defaultVert.vert
shaders/pbr_example/: compile_pbr_example_shaders.sh  irradiancecube.frag  pbr.vert  pbr_khr.frag  prefilteredenvmap.frag  skybox.vert
src/: main.cpp
src/CRLCamera/: CRLBaseInterface.h  CRLPhysicalCamera.cpp  CRLPhysicalCamera.h  CRLVirtualCamera.cpp  CRLVirtualCamera.h  CameraConnection.cpp  CameraConnection.h  ThreadPool.h
src/Core/: Buffer.cpp  CommandBuffer.cpp  Definitions.h  RenderResource.cpp  RendererConfig.cpp  ServerConnection.cpp  Texture.cpp  Texture.h  Validation.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/Features/: Feature.cpp  Feature.h  VisualOdometry.cpp  VisualOdometry.h
src/ImGui/: GuiManager.cpp  LayerFactory.cpp  ScriptUIAddons.cpp  Widgets.cpp
src/ModelLoaders/: CRLCameraModels.cpp  CRLCameraModels.h  ComputeShader.cpp  CustomModels.cpp  GLTFModel.cpp  GLTFModel2.cpp  GaussianSplat.cpp  ImageView.cpp  MeshModel.cpp  MeshModel.h  PointCloudLoader.cpp  glTFModel.cpp  glTFModel.h
src/Renderer/: Renderer.cpp  Renderer.h  UsageMonitor.cpp  shaderParams.h
src/Scripts/: Base.h  Example.cpp  Example.h
webtreemap/: bbdata.json  index.html  webtreemap.css  webtreemap.js
(+1457 files in other folders)
